update: annonce adding
