# models/annonce.js
@@ -1,0 +1,26 @@
+'use strict';
+const {
+  Model
+} = require('sequelize');
+module.exports = (sequelize, DataTypes) => {
+  class annonce extends Model {
+    /**
+     * Helper method for defining associations.
+     * This method is not a part of Sequelize lifecycle.
+     * The `models/index` file will call this method automatically.
+     */
+    static associate(models) {
+      // define association here
+    }
+  };
+  annonce.init({
+    title: DataTypes.STRING,
+    message: DataTypes.STRING,
+    lien: DataTypes.STRING,
+    status: DataTypes.BOOLEAN
+  }, {
+    sequelize,
+    modelName: 'annonce',
+  });
+  return annonce;
+};
