# routes/app/appversion.js
@@ -5,6 +5,7 @@ var bodyParser = require('body-parser');
 var jsonParser = bodyParser.json();
 const AppController = require('../../controllers/app/appController');
 const { user_createNotification, all_createNotification, get_user_Notification, get_all_notification, readNotif, createPolicy, updatePolicy, createFaq, updateFaq, createSupport, getPolicy, getFaq, getSupport } = require('../../controllers/app/appController');
+const { getAllAnnonce, getAnnonce, createAnnonce, updateAnnonce, deleteAnnonce } = require('../../controllers/app/annonceController');
 
 router.get("/app/get/version", AppController.getVersion);
 router.put("/app/update/version",jsonParser, AppController.updateVersion);
@@ -27,5 +28,12 @@ router.put("/app/faq/update/:id_question",jsonParser,updateFaq);
 //app support/help
 router.get("/app/support",getSupport)
 router.post("/app/support/create",jsonParser,createSupport);
+
+//app announce 
+router.get("/app/annonce",getAllAnnonce);
+router.get("/app/annonce/{id_annonce}",getAnnonce);
+router.post("/app/annonce/create",jsonParser,createAnnonce);
+router.put("/app/annonce/update",jsonParser,updateAnnonce);
+router.delete("/app/annonce/delete/{id_annonce}",deleteAnnonce)
 
 module.exports =  router;
